update and validate handlers
