# backend/user_service/internal/api/update_v1.go
@@ -1,10 +1,16 @@
 package api
 
 import (
-	user_servicepb "chattery/backend/user_service/internal/pb/user_service"
 	"context"
+
+	user_servicepb "chattery/backend/user_service/internal/pb/user_service"
+	"chattery/backend/user_service/internal/utils"
 )
 
 func (s *Server) UpdateV1(ctx context.Context, request *user_servicepb.UpdateV1Request) (*user_servicepb.UpdateV1Response, error) {
-	return nil, nil
+	user := convertUserFromUpdateRequest(request)
+	if err := s.service.Update(ctx, request.GetSession().GetValue(), user); err != nil {
+		return nil, utils.HandleGRPCError(err)
+	}
+	return &user_servicepb.UpdateV1Response{}, nil
 }
